--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -25,6 +25,7 @@
 	               	  <i>Behold!</i> Your latest feats:
 	               </h3>
 	               <br>
+	               		<!-- see my notes on each_with_index in public_profile.erb-->
 	                     <% @num = 1 %>
 	                          <% @poems.each do |poem| %>
 								    <ul class="list_of_poems">
