--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
 <body>
 	<div class="row">
 		  <div class="column1 column" >
-		  		<p> make poetry.
+		  		<p> make poetry today.
 		  		   
 		  		</p>
 		  </div>
